[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/GameLayer/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/Level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Characters/Mage.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/GameLayer/GameOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/GameLayer/FinishGameMenu.tscn" type="PackedScene" id=6]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 114, 851 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 8

[node name="GameOverlay" parent="InterfaceLayer" instance=ExtResource( 5 )]

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="FinishGame" parent="InterfaceLayer" instance=ExtResource( 6 )]
pause_mode = 2

[connection signal="toggle_pause" from="InterfaceLayer/GameOverlay" to="." method="_on_toggle_pause"]
[connection signal="terminate_game" from="InterfaceLayer/PauseMenu" to="." method="_on_terminate_game"]
[connection signal="toggle_configuration" from="InterfaceLayer/PauseMenu" to="." method="_on_toggle_configuration"]
[connection signal="toggle_pause" from="InterfaceLayer/PauseMenu" to="." method="_on_toggle_pause"]
[connection signal="finish_game" from="InterfaceLayer/FinishGame" to="." method="_on_FinishGame_finish_game"]
